--- a/src/app/main-content/login/login.component.scss
+++ b/src/app/main-content/login/login.component.scss
@@ -7,65 +7,13 @@
     gap: 1%;
 }
 
-app-input-field{
-    @include heightWidth($w: 75%, $h: auto);
-    margin-top: 16px;
-}
-
-button{
-    @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--secundary-bg));
-    min-width: clamp(125px, 4vw, 160px);
-    margin: 18px 8px 0px 8px;
-    height: calc(60px - 16px);
-    border-radius: 36px;
-    padding: 8px 16px;
-    border: 1px solid transparent;
-    background-color: var(--text-blue);
-
-    &:hover{
-        background-color: var(--purple-2);
-        cursor: pointer;
-    }
-
-    @include respond-to-maxWidth(smallMedium) {
-        padding: 6px 12px;
-        letter-spacing: 0px;
-    }
-}
-
-.specialButton{
-    background-color: transparent;
-    border-color: var(--purple-2);
-    color: var(--text-blue);
-    &:hover{
-        color: var(--secundary-bg);
-        background-color: var(--purple-2);
-        cursor: pointer;
-    }
-}
-
-.button-collection{
-    @include dFlex ($jc: center);
-    gap: 2%;
-    @include heightWidth($w: 75%, $h: auto);
-
-    @include respond-to-maxWidth(small) {
-        margin-top: 8px;
-        gap: 0%;
-    }
-}
-
-.input-area{
-    @include heightWidth($w: 100%, $h: auto);
-    @include dFlex ();
-    flex-direction: column;
-}
 
 .whiteBox::-webkit-scrollbar{
     display: none;
 }
 
 .whiteBox{
+    position: relative;
     @include heightWidth($w: 100%, $h: 100%);
     @include dFlex($jc: space-between);
     max-width: 600px;
@@ -81,86 +29,98 @@ button{
     @include respond-to-maxWidth(medium) {
         @include heightWidth($w: 90%, $h: 100%);
     }
-
-    h1{
-        @include figtree($fw: 600, $fs: clamp(42px,8vw,56px), $c: var(--purple-3));
-        margin-bottom: clamp(0px,4vw,18px);
-    }
-
-    p{
-        @include heightWidth($w: 75%, $h: auto);
-        @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--text-black));
-        text-align: center;
-    }
-
-    a{
-        @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--purple-2));
-        margin: 0px 8px;
-        padding: 8px 16px;
-        border: 1px solid  transparent;
-        border-radius: 36px;
-
-        &:hover{
-            cursor: pointer;
-            border-color: var(--primary-bg);
-            background-color: var(--primary-bg);
-            color: var(--text-blue);
-            font-weight: 600;
-        }
-
-    }
 }
 
-.hrElement{
-    @include heightWidth($w: 90%, $h: auto);
+.deactive-forwards{
+    width: 100%;
     @include dFlex;
-    position: relative;
-
-    span{
-        @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--text-black));
-        background-color: var(--secundary-bg);
-        z-index: 1;
-        padding: 8px 16px;
-        border-radius: 36px;
-    }
-
-    &::after{
-        content: "";
-        position: absolute;
-        top: calc(50% - 2px);
-        z-index: 0;
-        @include heightWidth($w: 100%, $h: 100%);
-        border-top: 2px solid var(--primary-bg);
-    }
+    position: absolute;
+    position: 0px;
+    left: 0px;
+    animation: fade-out-forwards 0.35s ease-in forwards;
 }
 
-.google-button{
+.active-forwards{
+    width: 100%;
     @include dFlex;
-    @include heightWidth($w: 75%, $h: 60px);
-    background-color: var(--primary-bg);
-    border-radius: 36px;
-    border: 1px solid transparent;
+    position: absolute;
+    position: 0px;
+    left: 0px;
+    animation: fade-in-forwards 0.35s ease-in forwards;
+}
 
-    img{
-        @include heightWidth($w: 36px, $h: 36px); 
-        margin-right: 18px;
-
-        @include respond-to-maxWidth(smallMedium) {
-            margin-right: 8px;
-            @include heightWidth($w: clamp(24px, 8vw, 36px), $h: clamp(24px, 8vw, 36px)); 
-        }
+@keyframes fade-out-forwards{
+    from{
+    opacity: 1;
+    transform: translateX(0px);
     }
 
-    span{
-        @include figtree($fw: 400, $fs: clamp(16px,4vw,18px), $c: var(--text-blue));
-    }
-
-    &:hover{
-        background-color: var(--primary-bg);
-        border-color: var(--purple-2);
-        cursor: pointer;
-        span{
-            font-weight: 600;
-        }
+    to{
+    opacity: 0;
+    display: none;
+    transform: translateX(-500px);
     }
 }
+
+
+@keyframes fade-in-forwards{
+    from{
+    opacity: 0;
+    transform: translateX(500px);
+    display: flex;
+    }
+
+    to{
+    opacity: 1;
+    transform: translateX(0px);
+    }
+}
+
+.deactive-backwards{
+    width: 100%;
+    @include dFlex;
+    position: absolute;
+    position: 0px;
+    left: 0px;
+    animation: fade-out-backwards 0.35s ease-in forwards;
+}
+
+.active-backwards{
+    width: 100%;
+    @include dFlex;
+    position: absolute;
+    position: 0px;
+    left: 0px;
+    animation: fade-in-backwards 0.35s ease-in forwards;
+}
+
+@keyframes fade-out-backwards{
+    from{
+    opacity: 1;
+    transform: translateX(0px);
+    }
+
+    to{
+    opacity: 0;
+    display: none;
+    transform: translateX(500px);
+    }
+}
+
+@keyframes fade-in-backwards{
+    from{
+    opacity: 0;
+    transform: translateX(-500px);
+    display: flex;
+    }
+
+    to{
+    opacity: 1;
+    transform: translateX(0px);
+    }
+}
+
+.still-deactive{
+    display: none;
+}
+
