--- a/src/app/main-content/login/choose-avatar/choose-avatar.component.html
+++ b/src/app/main-content/login/choose-avatar/choose-avatar.component.html
@@ -5,16 +5,16 @@
         <h1>Choose Your Avatar</h1>
     </div>
 
-    <div class="currentProfil"><img src="./img/profil-pic/001.svg"></div>
+    <div class="currentProfil"><img src="./img/profile-pic/001.svg"></div>
     <div class="currentName">Frederik Beck</div>
     <p class="string">Choose your avatar....</p>
     <div class="default-presets">
-        <div><img src="./img/profil-pic/001.svg"> </div>
-        <div><img src="./img/profil-pic/002.svg"> </div>
-        <div><img src="./img/profil-pic/003.svg"> </div>
-        <div><img src="./img/profil-pic/004.svg"> </div>
-        <div><img src="./img/profil-pic/005.svg"> </div>
-        <div><img src="./img/profil-pic/006.svg"> </div>
+        <div><img src="./img/profile-pic/001.svg"> </div>
+        <div><img src="./img/profile-pic/002.svg"> </div>
+        <div><img src="./img/profile-pic/003.svg"> </div>
+        <div><img src="./img/profile-pic/004.svg"> </div>
+        <div><img src="./img/profile-pic/005.svg"> </div>
+        <div><img src="./img/profile-pic/006.svg"> </div>
     </div>
     <div class="set-left">
         <p>Or you can</p><button class="specialButton">Upload foto</button> 
