add materiel design to mat-icons in chat header and message field

--- a/src/app/main-content/chat/chat-header/chat-header.component.scss
+++ b/src/app/main-content/chat/chat-header/chat-header.component.scss
@@ -58,10 +58,9 @@ section {
     }
 }
 
-.add-members {
-    @include materialSymbols();
-}
 
-.hashtag {
-    @include materialSymbols();
+
+mat-icon {
+    @include dFlex();
+    @include materialSymbols($fs: 24px);
 }
