change mixin font materield icons

--- a/src/app/main-content/devspace/devspace.component.html
+++ b/src/app/main-content/devspace/devspace.component.html
@@ -30,7 +30,7 @@
                 <p class="channel"># {{channel.title}}</p>
             </div>
             <div class="addChannelButton" (click)="openCreateChannelDialog()">
-                <i class="material-icons">add_circle_outline</i>
+                <mat-icon class="material-icons">add_circle_outline</mat-icon>
                 Add Channel
             </div>
         </div>
