--- a/src/app/main-content/login/choose-avatar/choose-avatar.component.scss
+++ b/src/app/main-content/login/choose-avatar/choose-avatar.component.scss
@@ -38,7 +38,6 @@
             }
         }
     }
-
 }
 
 button{
@@ -195,6 +194,8 @@ a{
 }
 
 .step-back-button{
+    @include materialSymbols;
+    font-size: 24px;
     color: var(--text-black);
     text-align: center;
     @include dFlex;
