materiel icons mixin class chat and message field

--- a/src/app/main-content/thread/thread-message-field/thread-message-field.component.scss
+++ b/src/app/main-content/thread/thread-message-field/thread-message-field.component.scss
@@ -2,6 +2,7 @@
 
 section {
     box-sizing: border-box;
+    position: relative;
     padding: 20px;
     @include heightWidth();
 }
@@ -41,11 +42,11 @@ section {
 
         button {
             @include heightWidth($w: 35px, $h: 35px);
-            @include dFlex();
+
+            @include materialSymbols($c: var(--text-gray), $fs: 24px);
             border: none;
             background-color: var(--secundary-bg);
             border-radius: 50%;
-            color: var(--text-gray);
 
             &:hover {
                 background-color: var(--primary-bg);
@@ -56,10 +57,10 @@ section {
     .send-btn {
         @include heightWidth($w: 35px, $h: 35px);
         @include dFlex();
+        @include materialSymbols($c: var(--purple-1), $fs: 28px);
         border: none;
         background-color: var(--secundary-bg);
         border-radius: 50%;
-        color: var(--purple-1);
 
         &:hover {
             background-color: var(--primary-bg);
@@ -71,4 +72,63 @@ section {
         bottom: 0px;
         left: 0px;
     }
+}
+
+input[type="file"] {
+    display: none;
+}
+
+.flie-label {
+    @include dFlex();
+    @include heightWidth($w: 35px, $h: 35px);
+    border-radius: 50%;
+
+    &:hover {
+        background-color: var(--primary-bg);
+    }
+}
+
+.open-file {
+    cursor: pointer;
+    @include dFlex();
+    @include materialSymbols($c: var(--text-gray), $fs: 24px);
+}
+
+.user-list {
+    position: absolute;
+    background: var(--primary-bg);
+    border: 1px solid #ddd;
+    overflow-y: auto;
+    top: -102px;
+    left: 20px;
+    width: 40%;
+    height: 120px;
+    border-radius: 20px;
+    overflow-y: scroll;
+    scrollbar-width: none;
+}
+
+.user-list ul {
+    @include nunito($fw: 400, $fs: 16px, $c: var(--text-black));
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.user-list li {
+    padding: 8px;
+    cursor: pointer;
+}
+
+.user-list li:hover {
+    background-color: var(--purple-2);
+}
+
+.user-list .active {
+    background-color: #f0f0f0;
+    color: #333;
+}
+
+mat-icon {
+    @include dFlex();
 }
