--- a/src/app/main-content/thread/thread-message-field/thread-message-field.component.html
+++ b/src/app/main-content/thread/thread-message-field/thread-message-field.component.html
@@ -1,27 +1,42 @@
 <section>
-
-    <div class="message-field-container">
-        <textarea placeholder="Naricht an #Entwicklerteam"></textarea>
-
-        <div class="message-options-container">
-
-            <div class="options-btn">
-                <button [matMenuTriggerFor]="menu"><mat-icon>add</mat-icon></button>
-                <mat-menu #menu="matMenu">
-                    <button mat-menu-item>Item 1</button>
-                    <button mat-menu-item>Item 2</button>
-                  </mat-menu>
-                <div class="between-line"></div>
-                <button (click)="toggleEmojis($event)"><mat-icon>sentiment_satisfied</mat-icon></button>
-                <button><mat-icon>alternate_email</mat-icon></button>
-            </div>
-
-            <button class="send-btn"><mat-icon>send</mat-icon></button>
-        </div>
-
-        <div class="emojis-container" *ngIf="openEmojis">
-            <emoji-mart title="Pick your emoji…" emoji="point_up"></emoji-mart>
-        </div>
+    <div *ngIf="showUserList" class="user-list" #userListContainer>
+      <ul>
+        <li *ngIf="filteredUsers.length === 0">Kein Nutzer gefunden</li>
+        <li
+          *ngFor="let user of filteredUsers; let i = index"
+          (click)="selectUser(user)"
+          [class.active]="i === selectedIndex">
+          {{ user }}
+        </li>
+      </ul>
     </div>
-
-</section>
+  
+    <app-thread-images-preview [imagePreviews]="imagePreviews"></app-thread-images-preview>
+  
+    <div class="message-field-container">
+      <textarea placeholder="Naricht an #Entwicklerteam" [(ngModel)]="messageField" (input)="onInput($event)"></textarea>
+  
+      <div class="message-options-container">
+  
+        <div class="options-btn">
+          <label for="file-upload" class="flie-label">
+            <mat-icon class="open-file">add</mat-icon>
+          </label>
+          <input id="file-upload" type="file" [(ngModel)]="imageUploads" (change)="onFileSelected($event)" multiple>
+  
+  
+          <div class="between-line"></div>
+          <button (click)="toggleEmojis($event)"><mat-icon>sentiment_satisfied</mat-icon></button>
+          <button (click)="addTag()"><mat-icon>alternate_email</mat-icon></button>
+        </div>
+  
+        <button [disabled]="!(imagePreviews.length > 0 || messageField.length > 0)" class="send-btn"
+          (click)="sendMessage()"><mat-icon>send</mat-icon></button>
+      </div>
+  
+      <div class="emojis-container" *ngIf="openEmojis">
+        <emoji-mart title="Pick your emoji…" emoji="point_up" (emojiClick)="addEmoji($event)"></emoji-mart>
+      </div>
+    </div>
+  
+  </section>
