--- a/src/app/main-content/main-content.component.scss
+++ b/src/app/main-content/main-content.component.scss
@@ -1,29 +1,124 @@
 @import '../../mixin.scss';
 
+app-main-header {
+    @include padding(20px, 20px, 20px, 20px);
+    @include dFlex(space-between, center);
+    height: 120px;
+    width: 100%;
+
+    @include respond-to-maxWidth(large) {
+        z-index: 99;
+        width: 100%;
+        height: 80px;
+        background-color: var(--primary-bg);
+    }
+}
+
 .main-content {
     @include dFlex($ai: center, $jc: space-between);
-    @include heightWidth($h: 85vh);
+    @include heightWidth($h: calc(100vh - 120px));
 
     @include respond-to-maxWidth(large) {
         @include heightWidth($h: calc(100vh - 80px));
     }
 
+    gap: 20px;
+    @include padding(0px, 20px, 20px, 20px);
+    position: relative;
+} 
 
-    @include padding($pt: 0px);
+.main-content-wrapper {
+    position: relative; 
+    display: flex;
+    flex-grow: 1;
+    width: 100%;
+    height: 100%;
+    gap: 20px;
 }
 
 app-devspace {
     max-width: 20%;
     height: 100%;
+    @include respond-to-maxWidth(large) {
+        height: auto;
+        max-width: 302px;
+        position: absolute;
+        top: 80px;
+        left: 0;
+        bottom: 20px;
+        z-index: 1;
+        box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;        border-radius: 30px;
+    }
+    @include respond-to-maxWidth('smallMedium') {
+        width: 100%;
+        max-width: 100%;
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 1;
+    }
 }
 
 app-chat {
-    @include heightWidth($w: 55%);
-    margin: 0 20px;
+    @include heightWidth($w: 45%, $h: 100%);
     flex: auto;
 }
 
 app-thread {
-    max-width: 25%;
+    max-width: 35%;
     height: 100%;
+
+}
+
+.focus-app{
+    @include respond-to-maxWidth(large) {
+        width: 100%;
+        max-width: 100%;
+        position: relative;
+    }
+    @include respond-to-maxWidth('smallMedium') {
+        width: 100%;
+        max-width: 100%;
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 2;
+    }
+}
+
+.focus-app-thread{
+    @include respond-to-maxWidth(large) {
+        position: relative;
+    }
+    @include respond-to-maxWidth(medium) {
+        width: 100%;
+        max-width: 100%;
+        position: absolute;
+        left: 0;
+        right: 0;
+        z-index: 2;
+    }
+    @include respond-to-maxWidth('smallMedium') {
+        width: 100%;
+        max-width: 100%;
+        position: absolute;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 2;
+    }
+}
+
+.hiddenForMobile {
+    @include respond-to-maxWidth('smallMedium') {
+        display: none;
+    }
+}
+
+.visible{
+    @include respond-to-maxWidth('smallMedium') {
+        display: flex;
+    }
 }
