--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -13,8 +13,11 @@
         </app-chat>
         <app-thread  [ngClass]="{
             'focus-app-thread': threadAsTopLayer, 
-            'hiddenForMobile': chatAsTopLayer, 
+            'visible': threadIsOpen,
             }">
         </app-thread>
     </div>
 </div>
+
+
+<!-- 'hiddenForMobile': chatAsTopLayer,  -->
