--- a/src/app/main-content/message/message-reation/message-reation.component.scss
+++ b/src/app/main-content/message/message-reation/message-reation.component.scss
@@ -11,6 +11,7 @@
         background-color: var(--secundary-bg);
         margin-right: 10px;
         margin-top: 10px;
+        cursor: pointer;
 
         img {
             height: 100%
