--- a/src/app/main-content/devspace/devspace.component.html
+++ b/src/app/main-content/devspace/devspace.component.html
@@ -47,8 +47,8 @@
         <div class="dropDownContacts" @slideDown class="dropdown-content">
             <div class="contact" *ngFor="let member of members; let i = index">
                 <div class="contactPicture">
-                    <img class="userImage" src="{{member.img}}" alt="Member image">
-                    <img class="onlineStatus" [src]="member.isOnline ? '/img/profile-pic/online.svg' : '/img/profile-pic/offline.svg'" alt="Online status">
+                    <img class="userImage" src="{{member.imageUrl}}" alt="Member image">
+                    <img class="onlineStatus" [src]="member.status ? '/img/profile-pic/online.svg' : '/img/profile-pic/offline.svg'" alt="Online status">
                 </div>
                 <span>{{member.name}}</span>
             </div>
