--- a/src/app/main-content/login/sign-up/sign-up.component.html
+++ b/src/app/main-content/login/sign-up/sign-up.component.html
@@ -7,16 +7,13 @@
 
     <p>With your name and email address you have your new DABubble account.</p>
     <div class="input-area">   
-        <!--
-        <app-input-field #fullname icon="person" placeholder="Firstname & Lastname" [required]="true" pattern="^[a-zA-Z ]+$">> ></app-input-field>
-        <app-input-field #email icon="mail" placeholder="example@email.com" [required]="true" pattern="^[a-zA-Z ]+$">>  ></app-input-field>
-        <app-input-field #password icon="lock" placeholder="Password" [required]="true" pattern="^[a-zA-Z ]+$">>  ></app-input-field>
-            --->
-
-        <input type="text" name="fullName" [(ngModel)]="fullName" placeholder="Firstname & Lastname">
-        <input type="email" name="email" [(ngModel)]="email" [required]="true" pattern="^[a-zA-Z ]+$" placeholder="example@email.com">
-        <input type="password" name="password" [(ngModel)]="password" [required]="true" pattern="^[a-zA-Z ]+$" placeholder="Password">
-        <div class="set-right"> <button (click)="sendClickToParentPageCounter(2); registerUser();">Go On</button> </div>
+        <form (ngSubmit)="onSubmit(signUpForm, fullname.getValue(), email.getValue(), password.getValue(), 2)" #signUpForm="ngForm">
+        <app-input-field #fullname type="text" icon="person" placeholder="Firstname & Lastname" [required]="true" minlength="3" pattern="[A-Za-z._\-\s]+" ></app-input-field>
+        <app-input-field #email type="email" icon="mail" placeholder="example@email.com" [required]="true" minlength="6" pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"  ></app-input-field>
+        <app-input-field #password type="password" icon="lock" placeholder="Password" [required]="true" minlength="8" ></app-input-field>
+        <div class="set-right"> <button [disabled]="signUpForm.invalid">Go On</button> </div>
+        </form>
+       
     </div>
 
 </div>
